// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateIcon: Component should render correctly 1`] = `
<state.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;

exports[`StateIcon: Component should render with custom styles 1`] = `
<state.svg
  style={
    Object {
      "fill": "blue",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;
